fix overflow x

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,11 +41,12 @@ button {
   margin: auto;
   align-items: center;
   display: flex;
+  overflow: hidden;
 }
 
 .header-nav {
   background: black;
-  width: 100vw;
+  width: 100%;
   height: 65px;
 }
 
@@ -155,11 +156,12 @@ button {
   flex-direction: column;
   margin: auto;
   justify-content: center;
-  overflow: visible;
+  overflow: hidden;
   padding: 0 8px;
 }
 
 #flex-2 {
+  overflow-x: hidden;
   display: flex;
   align-items: center;
   justify-content: space-between;
